# Capstone-NF_GA-Prediction

./: .gitignore  0.notebook-1.ipynb  3.Model_finding.ipynb  8.Data_Visualization.ipynb  EDA.ipynb  EDA_and_Visualization.ipynb  GA-Customer-Revenue-Prediction.ipynb  GA-Customer-Revenue-Prediction_model.ipynb  LICENSE  README  README.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: 0.notebook-Copy1-checkpoint.ipynb  3.Model_finding-checkpoint.ipynb  8.Data_Visualization-Copy1-checkpoint.ipynb  EDA_and_Visualization-checkpoint.ipynb  GA-Customer-Revenue-Prediction-checkpoint.ipynb  alt_GA-Customer-Revenue-Prediction-checkpoint.ipynb
legacy/: GA-Customer-Revenue-Prediction_model.ipynb  Model_finding.ipynb
notebooks/: demo.ipynb
src/garev/: __init__.py  cli.py  config.py  pipeline.py
src/garev/data/: __init__.py  clean.py  loader.py  sample.py  schema.py
src/garev/features/: __init__.py  encoders.py  timeframe.py
src/garev/models/: __init__.py  evaluate.py  tune.py  two_stage.py
tests/: conftest.py  test_data.py  test_features.py  test_pipeline.py
