[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garev"
version = "1.0.0"
description = "Google Analytics Customer Revenue Prediction — a modern, two-stage gradient-boosting pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marc Musiol" }]
keywords = ["kaggle", "lightgbm", "revenue-prediction", "google-analytics", "gradient-boosting"]

# Core runtime dependencies. Versions are floored, not pinned, so the project
# keeps working with current releases; reproducible installs come from a lockfile.
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
# Hyper-parameter search and model explainability are heavy and optional.
tune = ["optuna>=3.6"]
explain = ["shap>=0.45", "matplotlib>=3.8"]
viz = ["matplotlib>=3.8", "plotly>=5.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
garev = "garev.cli:main"

[project.urls]
Repository = "https://github.com/m-musiol/Capstone-NF_GA-Prediction"
Competition = "https://www.kaggle.com/c/ga-customer-revenue-prediction"

[tool.hatch.build.targets.wheel]
packages = ["src/garev"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, modern rule set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, and simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM", "W"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
